Create separate function to fill parameters

--- a/src/views/email/bodyEmailNotifStartProject.html
+++ b/src/views/email/bodyEmailNotifStartProject.html
@@ -137,6 +137,7 @@
             <div class="banner"
                 style="text-align: center; background: rgb(118,172,220); background: radial-gradient(circle, rgba(118,172,220,1) 0%, rgba(31,111,184,1) 88%, rgba(0,115,188,1) 100%); color: white; padding: 2em 5em; overflow: hidden;">
             </div>
+        </div>
     </main>
 </body>
 
