create notification email for validation
implemented to additional validation, next when create new validation

--- a/src/views/email/bodyEmailRequestValidation.html
+++ b/src/views/email/bodyEmailRequestValidation.html
@@ -92,16 +92,16 @@
             />
           </div>
           <div class="email-content" style="overflow: hidden; color: black">
-            <p style="color: black">Dear {{name}},</p>
+            <p style="color: black">Dear {{validatorName}},</p>
             <p style="color: black">
-              Kami ingin menginformasikan mengenai request baru dari {{creator}} dengan detail
+              Kami ingin menginformasikan mengenai request baru dari {{creatorName}} dengan detail
               sebagai berikut:
             </p>
             <table style="width: 100%; color: black">
               <tr>
                 <td style="width: 30%; font-weight: bold">Creator</td>
                 <td style="font-weight: bold">:</td>
-                <td>{{creator}}</td>
+                <td>{{creatorName}}</td>
               </tr>
               <tr>
                 <td style="width: 30%; font-weight: bold">Ticket Name</td>
