Refactor email validation link styling

--- a/src/views/email/bodyEmailRequestValidation.html
+++ b/src/views/email/bodyEmailRequestValidation.html
@@ -142,10 +142,14 @@
             <br />
 
             <p>
-              Mohon cek dan validasi request ini pada tautan berikut: <br />
-              <a href="{{validation_link}}" style="color: blue; font-style: italic">
-                Validasi tiket
-              </a>
+              Mohon cek dan validasi request ini pada tautan berikut: 
+              <br />
+              <br />
+              <center>
+                <a href="{{validation_link}}" style="color: white; background-color: blue; font-style: italic; padding: 14px 82px; text-decoration: none;">
+                  Validasi tiket
+                </a>
+              </center>
             </p>
 
             <hr style="margin-top: 2em; background: red; color: red; padding: 1px" />
